--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "drizzle:gen": "drizzle-kit generate --config=drizzle.config.ts",
+    "drizzle:migrate": "node ./scripts/migrate.mjs"
   },
   "dependencies": {
     "@libsql/client": "^0.15.14",
+    "@types/better-sqlite3": "^7.6.13",
+    "drizzle-orm": "^0.44.5",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -20,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
