--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "use-debounce": "^10.0.6",
     "zod": "^3.24.2"
   },
   "devDependencies": {
