--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.544.0",
-    "next": "^15.2.3",
+    "next": "15.6.0-canary.10",
     "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
     "react-day-picker": "^9.10.0",
