--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^1.7.2",
+    "@clerk/nextjs": "^6.32.2",
     "@libsql/client": "^0.14.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -40,7 +40,6 @@
     "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.544.0",
     "next": "15.6.0-canary.10",
-    "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
     "react-day-picker": "^9.10.0",
     "react-dom": "^19.0.0",
